test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-create-deprecated/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-1
